--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "moment": "^2.29.1"
   },
   "description": "Job Vacancy API Indonesia",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  },
   "scripts": {
     "start": "node index.js"
   },
